force-app/main/default/objects/Complaint1__c/Complaint1__c.object-meta.xml
<CustomObject>
    <label>Complaint1</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Complaint No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>