force-app/main/default/objects/Complaint1__c/fields/Student1__c.field-meta.xml
<CustomField>
    <fullName>Student1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Student1</label>
    <referenceTo>Student1__c</referenceTo>
    <relationshipLabel>Complaints1</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>