force-app/main/default/objects/Complaint1__c/validationRules/Assigned_To_required_when_Status_is_In_P.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_To_required_when_Status_is_In_P</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;In Progress&quot;),
ISBLANK(Assigned_To__c)
)</errorConditionFormula>
    <errorMessage>Assign the complaint.</errorMessage>
</ValidationRule>