force-app/main/default/objects/Complaint1__c/validationRules/Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Description__c)</errorConditionFormula>
    <errorMessage>Enter Complaint Description.</errorMessage>
</ValidationRule>