force-app/main/default/objects/Complaint1__c/validationRules/Priority_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Priority__c))</errorConditionFormula>
    <errorMessage>Select Priority.</errorMessage>
</ValidationRule>