force-app/main/default/objects/Complaint1__c/validationRules/Subject_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Subject_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Subject__c)</errorConditionFormula>
    <errorMessage>Enter Complaint Subject.</errorMessage>
</ValidationRule>